samples/_failures_safe/1761530771_f5a5b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5d12d0d.c: In function ‘main’:
./samples/SAFE/__tmp_d5d12d0d.c:158:19: error: missing terminating " character
  158 |         if (scanf("%
      |                   ^~
./samples/SAFE/__tmp_d5d12d0d.c:158:9: error: expected expression at end of input
  158 |         if (scanf("%
      |         ^~
./samples/SAFE/__tmp_d5d12d0d.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5d12d0d.c:158:9: error: expected declaration or statement at end of input
